[package]
name = "voronoi"
version = "0.1.0"
authors = ["Andre-Patrick Bubel <code@andre-bubel.de>"]
build = "build.rs"

[dependencies]
nalgebra = "0.2"
libc = "*"
rust-mpfr = { git = "https://github.com/Moredread/rust-mpfr", branch = "feature/to_string" }

[dev-dependencies]
quickcheck = "0.2"

[build-dependencies]
gcc = "0.3"
